# go-raft-leader-election

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
cmd/: BUILD.bazel  main.go
cmd/follower/: BUILD.bazel  main.go
cmd/leader/: BUILD.bazel  main.go
pkg/conn/: BUILD.bazel  client.go  connection.go  grpcclient.go  grpcconnection.go
pkg/elector/: BUILD.bazel  client.go  connection.go  elector.go  grpcclient.go  grpcconnection.go  grpcelector.go  nodeelector.go  nodeelector_test.go
pkg/elector/conn/: BUILD.bazel  client.go  connection.go  grpcclient.go
pkg/heartbeat/: BUILD.bazel  heartbeat.go  nodeheartbeat.go
pkg/koala/: BUILD.bazel  leaderlookuprequest.go  server.go
pkg/node/: BUILD.bazel  candidate.go  candidate_test.go  follower.go  follower_test.go  leader.go  leader_test.go  node.go  nodestate.go
pkg/pb/: BUILD.bazel  koala.proto  raft.proto
pkg/raft/: BUILD.bazel  client.go  node.go  node_test.go  raft.go  server.go  term.go  term_test.go
pkg/server/: BUILD.bazel  appendrequest.go  server.go  voterequest.go
