load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/dunstall/goraft/cmd/leader",
    visibility = ["//visibility:private"],
    deps = ["//pkg/raft:go_default_library"],
)

go_binary(
    name = "raft",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
