load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    # Required to avoid gazelle including mocks.
    srcs = glob(
        # keep
        ["*.go"],
        exclude = [
            "*_test.go",
            "mock*.go",
        ],
    ),
    importpath = "github.com/dunstall/goraft/pkg/elector",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/pb:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

load("@gomock_rules//:gomock.bzl", "gomock")

gomock(
    name = "mock_elector",
    out = "mock_elector.go",
    interfaces = ["Elector"],
    library = "//pkg/elector:go_default_library",
    package = "mock_elector",
)

go_library(
    name = "go_mock_library",
    srcs = ["mock_elector.go"],
    importpath = "github.com/dunstall/goraft/pkg/elector/mock_elector",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_mock//gomock:go_default_library"],
)
