load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    # Required to avoid gazelle including mocks.
    srcs = glob(
        # keep
        ["*.go"],
        exclude = [
            "*_test.go",
            "mock*.go",
        ],
    ),
    importpath = "github.com/dunstall/goraft/pkg/elector",
    visibility = ["//visibility:public"],
    deps = ["//pkg/pb:go_default_library"],
)

load("@gomock_rules//:gomock.bzl", "gomock")

gomock(
    name = "mock_elector",
    out = "mock_elector.go",
    interfaces = ["Elector"],
    library = "//pkg/elector:go_default_library",
    package = "mock_elector",
)

gomock(
    name = "mock_client",
    out = "mock_client.go",
    interfaces = ["Client"],
    library = "//pkg/elector:go_default_library",
    package = "mock_elector",
)

go_library(
    name = "go_mock_library",
    srcs = [
        "mock_client.go",
        "mock_elector.go",
    ],
    importpath = "github.com/dunstall/goraft/pkg/elector/mock_elector",
    visibility = ["//visibility:public"],
    deps = [
        ":go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["grpcelector_test.go"],
    embed = [":go_default_library"],
    deps = [
        ":go_mock_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
