load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "candidate.go",
        "follower.go",
        "leader.go",
        "node.go",
        "nodestate.go",
    ],
    importpath = "github.com/dunstall/goraft/pkg/node",
    visibility = ["//visibility:public"],
    deps = ["//pkg/server:go_default_library"],
)
