load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "candidate.go",
        "follower.go",
        "leader.go",
        "node.go",
        "nodestate.go",
    ],
    importpath = "github.com/dunstall/goraft/pkg/node",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/server:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["follower_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/pb:go_default_library",
        "//pkg/server:go_default_library",
        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
