load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "candidate.go",
        "follower.go",
        "leader.go",
        "node.go",
        "nodestate.go",
    ],
    importpath = "github.com/dunstall/goraft/pkg/node",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/elector:go_default_library",
        "//pkg/server:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "candidate_test.go",
        "follower_test.go",
        "leader_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/elector:go_mock_library",
        "//pkg/server:go_mock_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
