load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "node.go",
        "term.go",
    ],
    importpath = "github.com/dunstall/goraft/pkg/raft",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "node_test.go",
        "term_test.go",
    ],
    embed = [":go_default_library"],
)
