load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["raft.go"],
    importpath = "github.com/dunstall/goraft/pkg/raft",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/node:go_default_library",
        "//pkg/server:go_default_library",
    ],
)
