load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    # Required to avoid gazelle removing mocks.
    srcs = glob(
        # keep
        ["*.go"],
        exclude = [
            "*_mock.go",
            "*_test.go",
        ],
    ),
    importpath = "github.com/dunstall/goraft/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/pb:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

load("@gomock_rules//:gomock.bzl", "gomock")

gomock(
    name = "mock_server",
    out = "mock_server.go",
    interfaces = ["VoteRequest"],
    library = "//pkg/server:go_default_library",
    package = "mock_server",
)

go_library(
    name = "go_mock_server_library",
    srcs = ["mock_server.go"],
    importpath = "github.com/dunstall/goraft/pkg/server/mock_server",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_mock//gomock:go_default_library"],
)
